--- a/en-GB/mail/chrome/messenger/search-attributes.properties
+++ b/en-GB/mail/chrome/messenger/search-attributes.properties
@@ -38,3 +38,4 @@ AttachmentStatus=Attachment Status
 JunkStatus=Junk Status
 Label=Label
 Customize=Customise…
+MissingCustomTerm=Missing Custom Term
