--- a/pl/mail/chrome/messenger/imapMsgs.properties
+++ b/pl/mail/chrome/messenger/imapMsgs.properties
@@ -42,7 +42,7 @@
 imapLoginFailedTitle                  = Nieudane logowanie
 imapLoginFailed                       = Logowanie na serwerze %S nie powiodło się.
 imapLoginFailedRetryButton            = &Spróbuj ponownie
-imapLoginFailedEnterNewPasswordButton = &Podaj nowe hasło
+imapLoginFailedEnterNewPasswordButton = &Wprowadź nowe hasło
 
 5000=Otwieranie folderu %S…
 5001=Tworzenie folderu…
