--- a/uk/mail/chrome/messenger/aboutRights.properties
+++ b/uk/mail/chrome/messenger/aboutRights.properties
@@ -1,9 +1,4 @@
-
-# FIXME: localize
-aboutRightsTitle=About Your Rights
-buttonLabel=Know your rights…
-buttonAccessKey=K
-
-# FIXME: localize
+buttonLabel=Знайте ваші права…
+buttonAccessKey=З
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyRightsText=%S is free and open source software from the non-profit Mozilla Foundation.
+notifyRightsText=%S є вільною та відкритою програмою від нерпибуткової Фундації Mozilla.
