--- a/uk/mail/chrome/messenger/localMsgs.properties
+++ b/uk/mail/chrome/messenger/localMsgs.properties
@@ -40,215 +40,222 @@
 
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
--321 = Не вистачає дискового простору, щоб завантажити нові повідомлення. Вилучте стару пошту, очистіть Смітник, або стисніть стару пошту і спробуйте ще раз.
+-321=Не вистачає дискового простору, щоб завантажити нові повідомлення. Вилучте стару пошту, очистіть Смітник, або стисніть стару пошту і спробуйте ще раз.
 
 # Out of memory
 ## @name LOCAL_OUT_OF_MEMORY
 ## @loc None
--1000 = Програмі не вистачає пам’яті.
+-1000=Програмі не вистачає пам’яті.
 
-# Status — parsing folder
+# Status - parsing folder
 ## @name LOCAL_STATUS_SELECTING_MAILBOX
 ## @loc None
 #LOCALIZATION NOTE (4000): Do not translate %s in the following line.
 # Place the word %s where the name of the mailbox should appear
-4000 = Створення загального файлу для %S…
+4000=Створення загального файлу для %S…
 
-# Status — parsing folder
+# Status - parsing folder
 ## @name LOCAL_STATUS_DOCUMENT_DONE
 ## @loc None
-4001 = Готово
+4001=Готово
 
-# Status — receiving message n of m
+# Status - receiving message n of m
 ## @name LOCAL_STATUS_RECEIVING_MESSAGE_OF
 ## @loc None
 #LOCALIZATION NOTE (4002): Do not translate %lu in the following line.
 # Place the word %lu where the number of messages should appear.
 # The first %lu will receive the number of messages received so far;
 # the second %lu will receive the total number of messages
-4002 = Триває завантаження повідомлень\: %S з %S
+4002=Триває завантаження повідомлень\: %S з %S
 
-# Status — pop3 server error
+# Status - pop3 server error
 ## @name POP3_SERVER_ERROR
 ## @loc None
 #LOCALIZATION NOTE (4003): Do not translate POP3 in the following line.
-4003 = Помилка поштового сервера POP3.
+4003=Помилка поштового сервера POP3.
 
-# Status — pop3 user name failed
+# Status - pop3 user name failed
 ## @name POP3_USERNAME_FAILURE
 ## @loc None
-4004 = Команда USER не виконана.
+4004=Команда USER не виконана.
 
-# Status — password failed
+# Status - password failed
 ## @name POP3_PASSWORD_FAILURE
 ## @loc None
-4005 = Команда PASS не виконана.
+4005=Команда PASS не виконана.
 
-# Status — write error occurred
+# Status - write error occurred
 ## @name POP3_MESSAGE_WRITE_ERROR
 ## @loc None
-4006 = Неможливо зберегти пошту в поштовій скриньці. Переконаєтеся, що у вас достатньо прав на це і дискового простору для збереження.
+4006=Неможливо зберегти пошту в поштовій скриньці. Переконаєтеся, що у вас достатньо прав на це і дискового простору для збереження.
 
-# Status — write error occurred
-## @name POP3_MESSAGE_FOLDER_BUSY
-## @loc None
-4029 = Вміст цієї теки обробляється. Зачекайте, доки закінчиться обробка.
-
-# Status — connecting to host
+# Status - connecting to host
 ## @name POP3_CONNECT_HOST_CONTACTED_SENDING_LOGIN_INFORMATION
 ## @loc None
-4007 = З’єднання\: з’єднання встановлене, відсилається реєстраційна інформація…
+4007=З’єднання\: з’єднання встановлене, відсилається реєстраційна інформація…
 
-# Status — no messages to download 
+# Status - no messages to download 
 ## @name POP3_NO_MESSAGES
 ## @loc None
-4008 = На сервері немає нових повідомлень.
+4008=На сервері немає нових повідомлень.
 
-# Status — messages received after the download
+# Status - messages received after the download
 ## @name POP3_DOWNLOAD_COUNT
 ## @loc None
 #LOCALIZATION NOTE (4009): Do not translate %ld in the following line.
 # Place the word %ld where the number of messages should appear.
 # The first %ld will receive the number of messages received so far;
 # the second %ld will receive the total number of messages
-4009 = Отримано %ld з %ld повідомлень
+4009=Отримано %ld з %ld повідомлень
 
-# Status — the server doesn't support UIDL…
-## @name POP3_SERVER_DOES_NOT_SUPPORT_UIDL_ETC
-## @loc None
-# Do not translate "POP3"
-# Do not translate "%S". Place %s in your translation where the name of the server should appear.
-# Do not translate "UIDL"
-
-# Status — the server doesn't support the top command
-## @name POP3_SERVER_DOES_NOT_SUPPORT_THE_TOP_COMMAND
-## @loc None
-# Do not translate "POP3"
-# Do not translate "%s". Place %s in your translation where the name of the server should appear.
-# Do not translate "TOP"
-
-# Status — retr failure from the server
+# Status - retr failure from the server
 ## @name POP3_RETR_FAILURE
 ## @loc None
 # LOCALIZATION NOTE(4012): Do not translate the word "POP3" below.
-4012 = Команда RETR не виконана. Помилка отримання повідомлення.
+4012=Команда RETR не виконана. Помилка отримання повідомлення.
 
-# Status — password undefined 
+# Status - password undefined 
 ## @name POP3_PASSWORD_UNDEFINED
 ## @loc None
-4013 = Помилка при отриманні пароля.
+4013=Помилка при отриманні пароля.
 
-# Status — username undefined 
+# Status - username undefined 
 ## @name POP3_USERNAME_UNDEFINED
 ## @loc None
-4014 = Ви не вказали ім’я користувача для цього сервера. Вкажіть його в меню настройок облікового запису і спробуйте знову.
+4014=Ви не вказали ім’я користувача для цього сервера. Вкажіть його в меню настройок облікового запису і спробуйте знову.
 
-# Status — list failure
+# Status - list failure
 ## @name POP3_LIST_FAILURE
 ## @loc None
 # LOCALIZATION NOTE(4015): Do not translate the word "POP3" below.
-4015 = Команда LIST не виконана. Помилка отримання ID і розміру повідомлення.
+4015=Команда LIST не виконана. Помилка отримання ID і розміру повідомлення.
 
-# Status — delete error 
+# Status - delete error 
 ## @name POP3_DELE_FAILURE
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
-4016 = Команда DELE не виконана. Помилка відмічання повідомлення як вилученого.
+4016=Команда DELE не виконана. Помилка відмічання повідомлення як вилученого.
 
 ## @name POP3_ENTER_PASSWORD_PROMPT
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
 # Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017 = Введіть пароль для %1$s на %2$s\:
+4017=Введіть пароль для %1$s на %2$s\:
 
 ## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
 # Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018 = Введіть новий пароль для користувача %.100s на %.100s\:
+4018=Введіть новий пароль для користувача %.100s на %.100s\:
 
 ## @name POP3_NO_ANSWER
 ## @loc None
-4019 = Немає відповіді
+4019=Немає відповіді
 
 ## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
 ## @loc None
-4020 = Введіть пароль\:
-
-## @name moveFolderToTrash
-## @loc None
+4020=Введіть пароль\:
 
 ## @name POP3_FOLDER_FOR_TRASH
 ## @loc None
-4023 = Тека «Вилучені» вже містить теку «%s». Тека, яку ви тільки що вилучили, міститься в теці «Вилучені» під новою назвою «%s».
+4023=Тека «Вилучені» вже містить теку «%s». Тека, яку ви тільки що вилучили, міститься в теці «Вилучені» під новою назвою «%s».
 
-# Status — stat failed
+# Status - stat failed
 ## @name POP3_STAT
 ## @loc None
-4024 = Команда STAT не виконана. Помилка отримання номера і розміру повідомлення.
+4024= Команда STAT не виконана. Помилка отримання номера і розміру повідомлення.
 
 ## @name POP3_SERVER_SAID
 ## @loc None
-4025 = Поштовий сервер %S відповів\:
+4025= Поштовий сервер %S відповів\:
 
 ## @name DELETING_MSGS_STATUS
 ## @loc None
-4026 = Вилучення %S з %S повідомлень
+4026=Вилучення %S з %S повідомлень
 
 ## @name COPYING_MSGS_STATUS
 ## @loc None
-4027 = Копіювання %S з %S повідомлень в %S
+4027=Копіювання %S з %S повідомлень в %S
 
 ## @name MOVING_MSGS_STATUS
 ## @loc None
-4028 = Переміщення %S з %S повідомлень в %S
+4028=Переміщення %S з %S повідомлень в %S
+
+# Status - write error occurred
+## @name POP3_MESSAGE_FOLDER_BUSY
+## @loc None
+4029=Вміст цієї теки обробляється. Зачекайте, доки закінчиться обробка.
 
 # secure authentication failed
 ## @name CANNOT_PROCESS_SECURE_AUTH
 ## @loc None
-4030 = Поштовий сервер не підтримує захищену аутентифікацію.
+4030=Поштовий сервер не підтримує захищену аутентифікацію.
+
+## @name MOVEMAIL_SPOOL_FILE_LOCKED
+## @loc None
+4032=Файл поштового буфера %S заблокований.
+
+## @name MOVEMAIL_CANT_OPEN_SPOOL_FILE
+## @loc None
+4033=Неможливо відкрити файл поштового буфера %S.
+
+## @name MOVEMAIL_CANT_CREATE_LOCK
+## @loc None
+4034=Неможливо створити блокуючий файл %S. Для роботи Movemail необхідне створення таких файлів в каталозі поштового буфера. Для більшості систем досить встановити цьому каталогу має права 01777.
+
+## @name MOVEMAIL_CANT_DELETE_LOCK
+## @loc None
+4035=Неможливо стерти блокуючий файл %S.
+
+## @name MOVEMAIL_CANT_TRUNCATE_SPOOL_FILE
+## @loc None
+4036=Неможливо зменшити файл буфера %S.
+
+## @name MOVEMAIL_SPOOL_FILE_NOT_FOUND
+## @loc None
+4037=Неможливо знайти локальний файл поштового буфера.
+
+## @name POP3_TMP_DOWNLOAD_FAILED
+## @loc None
+4038=При завантаженні наступного повідомлення відбулася помилка\:\nВідправник\: %S\n     Тема\: %S\n Можливо в цьому повідомленні міститься вірус або на диску недостатньо місця. Пропустити це повідомлення?
+
+# Status - the server doesn't support UIDL…
+## @name POP3_SERVER_DOES_NOT_SUPPORT_UIDL_ETC
+## @loc None
+# LOCALIZATION NOTE(4010): The following sentence should be translated in this way:
+# Do not translate "POP3"
+# Do not translate "%S". Place %S in your translation where the name of the server should appear.
+# Do not translate "UIDL"
+4040=Сервер POP3 (%S) не підтримує UIDL чи XTND XLST, необхідні для роботи опцій ``Залишити на сервері'', ``Максимальний розмір повідомлення'' or ``Отримати лише заголовки''. Щоб завантажити вашу пошту, вимкніть ці опції в Параметрах сервера для вашого сервера в вікні Налаштування облікових записів.
+
+# Status - the server doesn't support the top command
+## @name POP3_SERVER_DOES_NOT_SUPPORT_THE_TOP_COMMAND
+## @loc None
+# LOCALIZATION NOTE(4011): The following sentence should be translated in this way:
+# Do not translate "POP3"
+# Do not translate "%S". Place %S in your translation where the name of the server should appear.
+# Do not translate "TOP"
+4041=Поштовий сервер POP3 (%S) не підтримує команду TOP. Без неї не працюватимуть опції ``Максимальний розмір повідомлення'' та ``Отримувати лише заголовки''.  Їх було вимкнено і завантажаться всі повідомлення незалежно від їх розміру.
 
 # secure authentication failed and unsure why
 ## @name CANNOT_PROCESS_APOP_AUTH
 ## @loc None
-
-## @name MOVEMAIL_SPOOL_FILE_LOCKED
-## @loc None
-4032 = Файл поштового буфера %S заблокований.
-
-## @name MOVEMAIL_CANT_OPEN_SPOOL_FILE
-## @loc None
-4033 = Неможливо відкрити файл поштового буфера %S.
-
-## @name MOVEMAIL_CANT_CREATE_LOCK
-## @loc None
-4034 = Неможливо створити блокуючий файл %S. Для роботи Movemail необхідне створення таких файлів в каталозі поштового буфера. Для більшості систем досить встановити цьому каталогу має права 01777.
-
-## @name MOVEMAIL_CANT_DELETE_LOCK
-## @loc None
-4035 = Неможливо стерти блокуючий файл %S.
-
-## @name MOVEMAIL_CANT_TRUNCATE_SPOOL_FILE
-## @loc None
-4036 = Неможливо зменшити файл буфера %S.
-
-## @name MOVEMAIL_SPOOL_FILE_NOT_FOUND
-## @loc None
-4037 = Неможливо знайти локальний файл поштового буфера.
-
-## @name POP3_TMP_DOWNLOAD_FAILED
-## @loc None
-4038 = При завантаженні наступного повідомлення відбулася помилка\:\nВідправник\: %S\n     Тема\: %S\n Можливо в цьому повідомленні міститься вірус або на диску недостатньо місця. Пропустити це повідомлення?
+4042=Поштовий сервер не підтримує захищену автентифікацію або ж ви ввели не той пароль. Перевірте, будь-ласка, ваш пароль або вимкніть захищену автентифікацію в налаштуваннях сервера у вікні Параметрів облікового запису.\n
 
 ## @name NS_ERROR_COULD_NOT_CONNECT_VIA_TLS
 ## @loc None
-
-# FIXME: localize
-4040=Сервер POP3 (%S) не підтримує UIDL чи XTND XLST, необхідні для роботи опцій ``Залишити на сервері'', ``Максимальний розмір повідомлення'' or ``Отримати лише заголовки''. Щоб завантажити вашу пошту, вимкніть ці опції в Параметрах сервера для вашого сервера в вікні Налаштування облікових записів.
-4041=Поштовий сервер POP3 (%S) не підтримує команду TOP. Без неї не працюватимуть опції ``Максимальний розмір повідомлення'' та ``Отримувати лише заголовки''.  Їх було вимкнено і завантажаться всі повідомлення незалежно від їх розміру.
-4042=Поштовий сервер не підтримує захищену автентифікацію або ж ви ввели не той пароль. Перевірте, будь-ласка, ваш пароль або вимкніть захищену автентифікацію в налаштуваннях сервера у вікні Параметрів облікового запису.\n
 4043=Не вдалося встановити TLS-зв'язок із сервером POP3. Сервер може не працювати чи бути неправильно налаштованим. Будь-ласка, перевірте конфігурацію в налаштуваннях сервера у вікні Параметрів облікового запису.
+
+## @name POP3_MOVE_FOLDER_TO_TRASH
+## @loc None
 # LOCALIZATION NOTE (4044): Do not translate the word %S below.
+# "%S" is the the name of the folder.
 4044=Ви впевнені, що хочете знищити теку '%S'?
+
+## @name POP3_DELETE_FOLDER_DIALOG_TITLE
+## @loc None
 4045=Знищити теку
+
+## @name POP3_DELETE_FOLDER_BUTTON_LABEL
+## @loc None
 4046=&Знищити теку
