--- a/uk/mail/chrome/messenger/mime.properties
+++ b/uk/mail/chrome/messenger/mime.properties
@@ -38,246 +38,168 @@
 # The following are used by libmime to emit header display in HTML
 #
 
-# Out of memory
-## @name MIME_OUT_OF_MEMORY
-## @loc None
-
-# Can't open a temp file
-## @name MIME_UNABLE_TO_OPEN_TMP_FILE
-## @loc None
-
-# Can't write temp file
-## @name MIME_ERROR_WRITING_FILE
-## @loc None
-
 # Mail subject
 ## @name MIME_MHTML_SUBJECT
 ## @loc None
-1000 = Тема
+1000=Тема
 
 # Resent-Comments
 ## @name MIME_MHTML_RESENT_COMMENTS
 ## @loc 
-1001 = Пересилання-Коментарі
+1001=Пересилання-Коментарі
 
 # Resent-Date
 ## @name MIME_MHTML_RESENT_DATE
 ## @loc 
-1002 = Пересилання-Дата
+1002=Пересилання-Дата
 
 # Resent-Sender
 ## @name MIME_MHTML_RESENT_SENDER
 ## @loc 
-1003 = Пересилання-Відправник
+1003=Пересилання-Відправник
 
 # Resent-From
 ## @name MIME_MHTML_RESENT_FROM
 ## @loc 
-1004 = Пересилання-Від
+1004=Пересилання-Від
 
 # Resent-To
 ## @name MIME_MHTML_RESENT_TO
 ## @loc 
-1005 = Пересилання-Кому
+1005=Пересилання-Кому
 
 # Resent-CC
 ## @name MIME_MHTML_RESENT_CC
 ## @loc 
 # LOCALIZATION NOTE (1006): Do not translate "CC" below.
-1006 = Пересилання-Копія
+1006=Пересилання-Копія
 
 # Date
 ## @name MIME_MHTML_DATE
 ## @loc 
-1007 = Дата
+1007=Дата
 
 # Sender
 ## @name MIME_MHTML_SENDER
 ## @loc 
-1008 = Відправник
+1008=Відправник
 
 # From
 ## @name MIME_MHTML_FROM
 ## @loc 
-1009 = Від
+1009=Від
 
 # Reply-To
 ## @name MIME_MHTML_REPLY_TO
 ## @loc 
-1010 = Відповісти
+1010=Відповісти
 
 # Organization
 ## @name MIME_MHTML_ORGANIZATION
 ## @loc 
-1011 = Організація
+1011=Організація
 
 # To
 ## @name MIME_MHTML_TO
 ## @loc 
-1012 = Кому
+1012=Кому
 
 # CC
 ## @name MIME_MHTML_CC
 ## @loc 
 # LOCALIZATION NOTE (1013): Do not translate "CC" below.
-1013 = Копія
+1013=Копія
 
 # Newsgroups
 ## @name MIME_MHTML_NEWSGROUPS
 ## @loc 
-1014 = Конференції
+1014=Конференції
 
 # Followup-To
 ## @name MIME_MHTML_FOLLOWUP_TO
 ## @loc 
-1015 = Відповідь в конференцію
+1015=Відповідь в конференцію
 
 # References
 ## @name MIME_MHTML_REFERENCES
 ## @loc 
-1016 = Посилання
-
-# Name
-## @name MIME_MHTML_NAME
-## @loc 
-
-# Type
-## @name MIME_MHTML_TYPE
-## @loc 
-
-# Encoding
-## @name MIME_MHTML_ENCODING
-## @loc 
-
-# Description
-## @name MIME_MHTML_DESCRIPTION
-## @loc 
+1016=Посилання
 
 # Message ID
 ## @name MIME_MHTML_MESSAGE_ID
 ## @loc 
-1021 = Ідентифікатор
-
-# Resent Message ID
-## @name MIME_MHTML_RESENT_MESSAGE_ID
-## @loc 
+1021=Ідентифікатор
 
 # BCC
 ## @name MIME_MHTML_BCC
 ## @loc 
-1023 = Прихована копія
-
-# Download Status
-## @name MIME_MHTML_DOWNLOAD_STATUS_HEADER
-## @loc 
-
-# Download status not downloaded
-## @name MIME_MHTML_DOWNLOAD_STATUS_NOT_DOWNLOADED
-## @loc 
+1023=Прихована копія
 
 # Link to doc
 ## @name MIME_MSG_LINK_TO_DOCUMENT
 ## @loc 
-1026 = Посилання на документ
+1026=Посилання на документ
 
 # Get Doc info
 ## @name MIME_MSG_DOCUMENT_INFO
 ## @loc 
-1027 = <B>Інформація про документ\:</B>
+1027=<B>Інформація про документ\:</B>
 
 # Msg Attachment
 ## @name MIME_MSG_ATTACHMENT
 ## @loc 
-1028 = Вкладення
-
-# Forwarded Msg Attachment
-## @name MIME_FORWARDED_MESSAGE_ATTACHMENT
-## @loc 
-
-# Mouseover text
-## @name MIME_MSG_ADDBOOK_MOUSEOVER_TEXT
-## @loc 
-# added to the address book.
-
-# XSender Internal
-## @name MIME_MSG_XSENDER_INTERNAL
-## @loc
-
-# User wrote
-## @name MIME_MSG_X_USER_WROTE
-## @loc 
-# Place the first %s where you wish the name of the message to appear
-# Place the second %s where you wish the name of the user to appear
-# Do not translate "<P>"
-
-# Msg user wrote
-## @name MIME_MSG_USER_WROTE
-## @loc 
-# Place the %s where you wish the name of the user to appear
-# Do not translate "<P>"
-
-# No Headers
-## @name MIME_MSG_NO_HEADERS
-## @loc 
-
-# No Headers
-## @name MIME_MSG_SHOW_ATTACHMENT_PANE
-## @loc 
-
-# Part not downloaded
-## @name MIME_MSG_NOT_DOWNLOADED
-## @loc 
+1028=Вкладення
 
 # Partial Message Format 1
 ## @name MIME_MSG_PARTIAL_FMT_1
 ## @loc
 # LOCALIZATION NOTE (1037): In the following line, translate only the word, "Truncated!".
-1037 = <P><CENTER><TABLE BORDER CELLSPACING\=5 CELLPADDING\=10 WIDTH\="80%%"><TR><TD ALIGN\=CENTER><FONT SIZE\="+1"><B>Урізано\!</B></FONT><HR>
+1037=<P><CENTER><TABLE BORDER CELLSPACING\=5 CELLPADDING\=10 WIDTH\="80%%"><TR><TD ALIGN\=CENTER><FONT SIZE\="+1"><B>Урізано\!</B></FONT><HR>
 
 # Partial Message Format 2
 ## @name MIME_MSG_PARTIAL_FMT_2
 ## @loc
 # LOCALIZATION NOTE (1038): Translate the following two lines as a single sentence. In the middle of the two sections
 # there will be a URL. You may translate the text in any order you wish, but the html tags must stay in the same locations.
-# In particular, the "<B>" tag must begin the first section, which must end with the "<A HREF=" tag. Do not translate the html tag,«<P>»
-1038 = <B>Це повідомлення перевищило максимальний розмір, встановлений в параметрах облікового запису, тому були завантажені тільки перші декілька рядків.<P>Натисніть <A HREF\="
+# In particular, the "<B>" tag must begin the first section, which must end with the "<A HREF=" tag. Do not translate the html tag,"<P>"
+1038=<B>Це повідомлення перевищило максимальний розмір, встановлений в параметрах облікового запису, тому були завантажені тільки перші декілька рядків.<P>Натисніть <A HREF\="
 
 # Partial Message Format 3
 ## @name MIME_MSG_PARTIAL_FMT_3
 ## @loc
 # LOCALIZATION NOTE (1039): This section must begin with the ">" sign and end with the tags,"</B></TD></TR></TABLE></CENTER>"
 # Do not translate "</A>" tag.
-1039 = ">тут</A>, щоб завантажити частину повідомлення, що залишилася.</B></TD></TR></TABLE></CENTER>
+1039=">тут</A>, щоб завантажити частину повідомлення, що залишилася.</B></TD></TR></TABLE></CENTER>
 
 # default attachment name
 ## @name MIME_MSG_DEFAULT_ATTACHMENT_NAME
 ## @loc 
 # LOCALIZATION NOTE (1040): Do not translate "%s" below.
 # Place the %s where you wish the part number of the attachment to appear
-1040 = Частина %s
+1040=Частина %s
 
 # default forwarded message prefix
-## @name MIME_FORWARDED_MESSAGE_USER_WROTE
+## @name MIME_FORWARDED_MESSAGE_HTML_USER_WROTE
 ## @loc 
-1041 = -------- Початкове повідомлення --------
+1041=-------- Початкове повідомлення --------
 
 # Partial Message Format2 1
 ## @name MIME_MSG_PARTIAL_FMT2_1
 ## @loc
-# LOCALIZATION NOTE (1037): In the following line, translate only the words, "Not Downloaded".
-1042 = <P><CENTER><TABLE BORDER CELLSPACING\=5 CELLPADDING\=10 WIDTH\="80%%"><TR><TD ALIGN\=CENTER><FONT SIZE\="+1"><B>Не завантажено</B></FONT><HR>
+# LOCALIZATION NOTE (1042): In the following line, translate only the words, "Not Downloaded".
+1042=<P><CENTER><TABLE BORDER CELLSPACING\=5 CELLPADDING\=10 WIDTH\="80%%"><TR><TD ALIGN\=CENTER><FONT SIZE\="+1"><B>Не завантажено</B></FONT><HR>
 
 # Partial Message Format2 2
 ## @name MIME_MSG_PARTIAL_FMT2_2
 ## @loc
-# LOCALIZATION NOTE (1038): Translate the following two lines as a single sentence. In the middle of the two sections
+# LOCALIZATION NOTE (1043): Translate the following two lines as a single sentence. In the middle of the two sections
 # there will be a URL. You may translate the text in any order you wish, but the html tags must stay in the same locations.
-# In particular, the "<B>" tag must begin the first section, which must end with the "<A HREF=" tag. Do not translate the html tag,«<P>»
-1043 = <B>Для даного поштового повідомлення були завантажені тільки заголовки.<P>Натисніть <A HREF\="
+# In particular, the "<B>" tag must begin the first section, which must end with the "<A HREF=" tag. Do not translate the html tag,"<P>"
+1043=<B>Для даного поштового повідомлення були завантажені тільки заголовки.<P>Натисніть <A HREF\="
 
 # Partial Message Format2 3
-## @name MIME_MSG_PARTIAL_FMT_3
+## @name MIME_MSG_PARTIAL_FMT2_3
 ## @loc
-# LOCALIZATION NOTE (1039): This section must begin with the ">" sign and end with the tags,"</B></TD></TR></TABLE></CENTER>"
+# LOCALIZATION NOTE (1044): This section must begin with the ">" sign and end with the tags,"</B></TD></TR></TABLE></CENTER>"
 # Do not translate "</A>" tag.
-1044 = ">тут</A> щоб завантажити решту частини повідомлення.</B></TD></TR></TABLE></CENTER>
+1044=">тут</A> щоб завантажити решту частини повідомлення.</B></TD></TR></TABLE></CENTER>
